--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowAnimationStyle">@null</item>
-
+        <item name="android:taskAffinity">@null</item>
+        <item name="android:excludeFromRecents">true</item>
     </style>
 </resources>
