--- a/app/src/main/res/layout/activity_drobe__image.xml
+++ b/app/src/main/res/layout/activity_drobe__image.xml
@@ -17,7 +17,7 @@
         android:id="@+id/hipit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ffffcad5"
+        android:background="#FFFFFF"
         android:text="Hip It!"
         android:layout_gravity="center_vertical|bottom" />
     </FrameLayout>
